Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-21824

0xc0000005 crash

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.5.1
    • 10.5.2
    • Server
    • None
    • Windows 10 x64

    Description

      I am trying the 10.5.1 on a dev machine.

      200227  9:34:30 [ERROR] mysqld got exception 0xc0000005 ;
       
      Thread pointer: 0x27b25b329b8
      Attempting backtrace. You can use the following information to find out
      where mysqld died. If you see no messages after this, something went
      terribly wrong...
      mysqld.exe!my_wc_to_printable_generic()[ctype.c:1055]
      mysqld.exe!my_convert_using_func()[ctype.c:1141]
      mysqld.exe!convert_error_message()[sql_error.cc:959]
      mysqld.exe!net_send_error_packet()[protocol.cc:456]
      mysqld.exe!Protocol::end_statement()[protocol.cc:599]
      mysqld.exe!do_command()[sql_parse.cc:1258]
      mysqld.exe!threadpool_process_request()[threadpool_common.cc:369]
      mysqld.exe!tp_callback()[threadpool_common.cc:196]
      ntdll.dll!RtlInitializeCriticalSection()
      ntdll.dll!RtlReleaseSRWLockExclusive()
      KERNEL32.DLL!BaseThreadInitThunk()
      ntdll.dll!RtlUserThreadStart()
       
      Some pointers may be invalid and cause the dump to abort.
      Query (0x0): 
      Connection ID (thread ID): 704
      Status: NOT_KILLED
       
      Optimizer switch: index_merge=on,index_merge_union=on,index_merge_sort_union=on,index_merge_intersection=on,index_merge_sort_intersection=off,engine_condition_pushdown=off,index_condition_pushdown=on,derived_merge=on,derived_with_keys=on,firstmatch=on,loosescan=on,materialization=on,in_to_exists=on,semijoin=on,partial_match_rowid_merge=on,partial_match_table_scan=on,subquery_cache=on,mrr=off,mrr_cost_based=off,mrr_sort_keys=off,outer_join_with_cache=on,semijoin_with_cache=on,join_cache_incremental=on,join_cache_hashed=on,join_cache_bka=on,optimize_join_buffer_size=on,table_elimination=on,extended_keys=on,exists_to_in=on,orderby_uses_equalities=on,condition_pushdown_for_derived=on,split_materialized=on,condition_pushdown_for_subquery=on,rowid_filter=on,condition_pushdown_from_having=on,not_null_range_scan=off
      

      Sometimes with a specific popular SQL query. crashed also if the query table did not exists.
      I was tried to execute the query manualy with no problem. sometimes it crashes.

      other strange thing: this code is updating (or inserting) one row, but I see in my GUI:
      2 row(s) affected

      What I was tried:

      • Run the query from a GUI - works (~99%).

      the query:
      insert into online set o_user=1, o_ip='127.0.0.1', o_url='', o_lastDate=now(), o_source=0 on duplicate key update o_user=1, o_ip='127.0.0.1', o_url='', o_lastDate=now(), o_source=0;

      the table:

      CREATE TABLE `online` (
        `o_id` int(10) unsigned NOT NULL AUTO_INCREMENT,
        `o_ip` varchar(35) CHARACTER SET utf8 COLLATE utf8_bin NOT NULL,
        `o_user` int(11) NOT NULL DEFAULT 0,
        `o_lastDate` datetime NOT NULL DEFAULT '1987-11-13 00:00:00',
        `o_url` varchar(155) NOT NULL DEFAULT '',
        `o_source` int(11) NOT NULL DEFAULT 0,
        `o_imstate` datetime NOT NULL DEFAULT '1987-11-13 00:00:00',
        PRIMARY KEY (`o_id`),
        UNIQUE KEY `user` (`o_user`) USING BTREE,
        KEY `date` (`o_lastDate`,`o_user`) USING BTREE
      ) ENGINE=InnoDB AUTO_INCREMENT=8 DEFAULT CHARSET=utf8 MAX_ROWS=10000;
      

      the original ENGINE was MEMORY, I was changed it to INNODB to remove the option that the MEMORY engins throw this bug.

      • Remove the table - still a chance for crash
      • Tried to run other code on the server - works
      • Tried to run the query 100 times - works

      I suspect the query isn't the problem and it just a big chance for it to run on the server crash, but when I was disabled it from the code side, the chance to crash was lowered from minutes to hours.

      Thanks !

      Attachments

        Issue Links

          Activity

            People

              wlad Vladislav Vaintroub
              Moshe L Moshe L
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.5h
                  0.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.