MDEV-21824 Crash in convert_error_message

restore check for client charset_info == NULL, which was previously
removed in MDEV-8844